--- a/css/style.css
+++ b/css/style.css
@@ -718,6 +718,10 @@ header {
     }
 }
 
+.catalog-grid__card:hover h3{
+    color: var(--primary);
+}
+
 .catalog-grid__card p {
     max-width: 39rem;
     font-weight: 400;
@@ -1808,16 +1812,20 @@ header {
     width: 100%;
     height: 28.6rem;
     border-radius: 2.2rem;
-    background-image: url('../images/contacts/contacts_map.png');
+    /* background-image: url('../images/contacts/contacts_map.png');
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: center center; */
 
     display: flex;
     padding: 1rem;
     justify-content: flex-end;
     align-items: flex-end;
+
+    overflow: hidden;
 }
+
+
 
 @media (max-width:768px) {
     .main-info__map {
@@ -1830,6 +1838,7 @@ header {
     padding: 1.3rem 2.1rem;
     border-radius: 2rem;
     background: var(--primary);
+    z-index: 2;
 }
 
 .map-adress-block p {
