--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,16 @@ body.lock {
     padding: 0;
 }
 
+.page {
+    margin-top: 12.4rem;
+}
+
+@media (max-width:560px) {
+    .page {
+        margin-top: 10rem;
+    }
+}
+
 .svg-bg-wrapper {
     position: fixed;
     top: -590px;
@@ -340,6 +350,69 @@ h4 {
     .title-indent {
         margin-left: 0;
     }
+}
+
+/* page title */
+.page-title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    gap: 2rem;
+    margin-bottom: 5rem;
+}
+
+@media (max-width:768px) {
+    .page-title {
+        gap: 1rem;
+        margin-bottom: 3rem;
+    }
+}
+
+.page-title h2 {
+    text-transform: none;
+    line-height: 6.5rem;
+}
+
+@media (max-width:768px) {
+    .page-title h2 {
+        font-size: 3.6rem;
+        line-height: 5.3rem;
+    }
+}
+
+/* breadcrumps */
+.breadcrumbs ol {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.breadcrumbs ol a {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    color: var(--gray2);
+    letter-spacing: 2%;
+}
+
+@media (hover: hover) {
+    .breadcrumbs ol a:hover {
+        color: var(--primary);
+    }
+}
+
+.breadcrumbs__divider {
+    font-weight: 500;
+    font-size: 12px;
+    color: #727272;
 }
 
 /* header */
@@ -2281,4 +2354,421 @@ footer {
     text-transform: none;
     width: 182px;
     justify-content: center;
+}
+
+/* catalog page */
+.catalog-page__container .catalog-grid__card p {
+    max-width: 29.5rem;
+}
+
+@media (max-width:560px) {
+    .catalog-page__container .catalog-grid__card p {
+        max-width: 26rem;
+    }
+}
+
+@media (max-width:385px) {
+    .catalog-page__container .catalog-grid__card p {
+        max-width: 24rem;
+    }
+}
+
+@media (max-width:345px) {
+    .catalog-page__container .catalog-grid__card p {
+        max-width: 22rem;
+    }
+}
+
+.catalog-page__container .catalog-grid__card img {
+    max-width: 36.38%;
+    max-height: 84.52%;
+}
+
+/* catalog banner */
+.catalog-page__banner {
+    margin-top: 10rem;
+    max-width: 1200px;
+    padding: 0;
+}
+
+@media (max-width:830px) {
+    .catalog-page__banner {
+        margin-top: 6rem;
+    }
+}
+
+.catalog-banner__content {
+    background: #fff;
+    border-radius: 2rem;
+    position: relative;
+    overflow: hidden;
+    padding: 8.2rem 9.2rem;
+
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    gap: 6.8rem;
+}
+
+@media (max-width:975px) {
+    .catalog-banner__content {
+        padding: 8.2rem 6.2rem;
+    }
+}
+
+@media (max-width:940px) {
+    .catalog-banner__content {
+        gap: 4.8rem;
+    }
+}
+
+@media (max-width:830px) {
+    .catalog-banner__content {
+        padding: 6.2rem 4.2rem;
+    }
+}
+
+@media (max-width:740px) {
+    .catalog-banner__content {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-align: start;
+        -ms-flex-align: start;
+        align-items: flex-start;
+        gap: 2rem;
+    }
+}
+
+@media (max-width:600px) {
+    .catalog-banner__content {
+        padding: 4.2rem 3.2rem;
+    }
+}
+
+.catalog-banner__feedback-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.catalog-banner__content h4 {
+    font-weight: 400;
+    font-size: 4.8rem;
+    line-height: 135%;
+}
+
+@media (max-width:940px) {
+    .catalog-banner__content h4 {
+        font-size: 4rem;
+    }
+}
+
+@media (max-width:600px) {
+    .catalog-banner__content h4 {
+        font-size: 2.8rem;
+    }
+}
+
+@media (max-width:435px) {
+    .catalog-banner__content h4 {
+        font-size: 2.5rem;
+    }
+}
+
+.catalog-banner__feedback-block h5 {
+    max-width: 29rem;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 138%;
+    color: #2190ec;
+}
+
+@media (max-width:435px) {
+    .catalog-banner__feedback-block h5 {
+        font-size: 1.4rem;
+        max-width: 20rem;
+    }
+}
+
+@media (max-width:385px) {
+    .catalog-banner__feedback-block h5 {
+        font-size: 1.3rem;
+    }
+}
+
+@media (max-width:360px) {
+    .catalog-banner__content {
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+    }
+
+    .catalog-banner__content h4 {
+        text-align: center;
+    }
+
+    .catalog-banner__feedback-block h5 {
+        text-align: center;
+        max-width: 25rem;
+    }
+
+    .catalog-banner__feedback-block {
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+    }
+}
+
+.catalog-banner__content img {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+}
+
+@media (max-width:940px) {
+    .catalog-banner__content img {
+        right: -5rem;
+    }
+}
+
+@media (max-width:690px) {
+    .catalog-banner__content img {
+        right: -10rem;
+    }
+}
+
+@media (max-width:640px) {
+    .catalog-banner__content img {
+        right: -15rem;
+    }
+}
+
+@media (max-width:500px) {
+    .catalog-banner__content img {
+        right: -22rem;
+    }
+}
+
+@media (max-width:385px) {
+    .catalog-banner__content img {
+        right: -25rem;
+    }
+}
+
+@media (max-width:360px) {
+    .catalog-banner__content img {
+        display: none;
+    }
+}
+
+/* catalog subcategory page */
+.items-grid {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 2rem 1fr 2rem 1fr 2rem 1fr;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2rem;
+    width: 100%;
+    grid-auto-rows: 1fr;
+}
+
+.item-card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    gap: 2rem;
+    height: 100%;
+
+    border-radius: 2rem;
+    background-color: #fff;
+    padding: 1.5rem 1.5rem 6rem;
+}
+
+@media (max-width:1024px) {
+    .item-card{
+        padding-bottom: 3rem;
+    }
+
+    .items-grid{
+        gap: 1rem;
+        -ms-grid-columns: 1fr 1rem 1fr 1rem 1fr 1rem 1fr;
+    }
+}
+
+@media (max-width:900px) {
+    .item-card{
+        padding: 1rem 1rem 3rem 1rem;
+        gap: 1.5rem;
+    }
+}
+
+@media (max-width:840px) {
+    .item-card{
+        padding: 1.5rem 1.5rem 3rem 1.5rem;
+    }
+
+    .items-grid{
+        gap: 1.5rem;
+        grid-template-columns: repeat(3, 1fr);
+        -ms-grid-columns: 1fr 1.5rem 1fr 1.5rem 1fr;
+    }
+}
+
+@media (max-width:768px) {
+    .item-card{
+        padding: 1rem 1rem 3rem 1rem;
+    }
+
+    .items-grid{
+        gap: 1rem;
+        grid-template-columns: repeat(3, 1fr);
+        -ms-grid-columns: 1fr 1rem 1fr 1rem 1fr;
+    }
+}
+
+@media (max-width:630px) {
+    .item-card{
+        padding: 1.5rem 1.5rem 5rem 1.5rem;
+    }
+
+    .items-grid{
+        grid-template-columns: repeat(2, 1fr);
+        -ms-grid-columns: 1fr 1rem 1fr;
+    }
+}
+
+@media (max-width:500px) {
+    .item-card{
+        padding: 1rem 1rem 3rem 1rem;
+    }
+}
+
+@media (max-width:380px) {
+    .item-card{
+        padding-bottom: 2rem;
+    }
+}
+
+.item-card__content {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+
+    gap: 3rem;
+}
+
+@media (max-width:1024px) {
+    .item-card__content{
+        gap: 1.5rem;
+    }
+}
+
+.item-card img {
+    border-radius: 1rem;
+    aspect-ratio: 305/197;
+    width: 100%;
+}
+
+.item-card__content h3 {
+    font-size: 2rem;
+    color: var(--gray2);
+    line-height: 135%;
+    text-transform: none;
+    -webkit-box-flex: 1;  /* Для старых браузеров */
+    -ms-flex-positive: 1; /* IE10 */
+    flex-grow: 1;         /* Растягивается на всё доступное пространство */
+    min-width: 0;         /* Фикс для переполнения в Flexbox */
+    word-wrap: break-word;
+}
+
+@media (max-width:900px) {
+    .item-card__content h3{
+        font-size: 1.8rem;
+    }
+}
+
+@media (max-width:630px) {
+    .item-card__content h3{
+        font-size: 2rem;
+    }
+}
+
+@media (max-width:500px) {
+    .item-card__content h3{
+        font-size: 1.8rem;
+    }
+}
+
+@media (max-width:380px) {
+    .item-card__content h3{
+        font-size: 1.6rem;
+    }
+}
+
+.item-card__content svg{
+    width: 4.8rem;
+    height: 4.8rem;
+    -ms-flex-negative: 0; /* IE10 */
+    flex-shrink: 0;  
+}
+
+@media (max-width:1024px) {
+    .item-card__content svg{
+        width: 3.8rem;
+        height: 3.8rem;
+    }
+}
+
+@media (max-width:630px) {
+    .item-card__content svg{
+        width: 4.5rem;
+        height: 4.5rem;
+    }
+}
+
+@media (max-width:500px) {
+    .item-card__content svg{
+        width: 4rem;
+        height: 4rem;
+    }
+}
+
+@media (max-width:380px) {
+    .item-card__content svg{
+        width: 3.8rem;
+        height: 3.8rem;
+    }
+}
+
+@media (hover: hover) {
+    .item-card:hover h3{
+        color: var(--primary);
+    }
+
+    .item-card:hover svg .fill-primary{
+        fill: var(--primary);
+    }
+
+    .item-card:hover svg .stroke-white{
+        stroke: #fff;
+    }
 }
