--- a/css/style.css
+++ b/css/style.css
@@ -898,50 +898,50 @@ header {
 }
 
 /* Товары */
-.catalog-grid__card:nth-child(1) img {
+.catalog-grid__card #tovary {
     max-width: 36.38%;
     max-height: 84.52%;
 }
 
 /* Аренда */
-.catalog-grid__card:nth-child(2) img {
+.catalog-grid__card #arenda {
     max-width: 36.38%;
     max-height: 91.64%;
 }
 
 @media (max-width:450px) {
-    .catalog-grid__card:nth-child(2) img {
+    .catalog-grid__card #arenda {
         max-width: 32.38%;
         max-height: 91.64%;
     }
 }
 
 /* Ремонт оборудования */
-.catalog-grid__card:nth-child(3) img {
+.catalog-grid__card #remont-oborudovaniya {
     max-width: 31.16%;
     max-height: 96%;
 }
 
 /* Ремонт опалубки */
-.catalog-grid__card:nth-child(4) img {
+.catalog-grid__card #remont-opalubki {
     max-width: 24.5%;
     height: 100%;
 }
 
 /* Обратный выкуп */
-.catalog-grid__card:nth-child(5) img {
+.catalog-grid__card #obratny-vykup {
     max-width: 34.25%;
     max-height: 90%;
 }
 
 /* Доставка */
-.catalog-grid__card:nth-child(6) img {
+.catalog-grid__card #dostavka {
     max-width: 40.58%;
     max-height: 100%;
 }
 
 @media (max-width:450px) {
-    .catalog-grid__card:nth-child(6) img {
+    .catalog-grid__card #dostavka {
         max-width: 34.58%;
         max-height: 100%;
     }
@@ -1407,6 +1407,7 @@ header {
     border-radius: 50%;
     background: rgba(27, 115, 187, 0.5);
     -webkit-border-radius: 50%;
+    cursor: pointer;
 }
 
 .custom-bullet.swiper-pagination-bullet-active {
@@ -2600,29 +2601,29 @@ footer {
 }
 
 @media (max-width:1024px) {
-    .item-card{
+    .item-card {
         padding-bottom: 3rem;
     }
 
-    .items-grid{
+    .items-grid {
         gap: 1rem;
         -ms-grid-columns: 1fr 1rem 1fr 1rem 1fr 1rem 1fr;
     }
 }
 
 @media (max-width:900px) {
-    .item-card{
+    .item-card {
         padding: 1rem 1rem 3rem 1rem;
         gap: 1.5rem;
     }
 }
 
 @media (max-width:840px) {
-    .item-card{
+    .item-card {
         padding: 1.5rem 1.5rem 3rem 1.5rem;
     }
 
-    .items-grid{
+    .items-grid {
         gap: 1.5rem;
         grid-template-columns: repeat(3, 1fr);
         -ms-grid-columns: 1fr 1.5rem 1fr 1.5rem 1fr;
@@ -2630,11 +2631,11 @@ footer {
 }
 
 @media (max-width:768px) {
-    .item-card{
+    .item-card {
         padding: 1rem 1rem 3rem 1rem;
     }
 
-    .items-grid{
+    .items-grid {
         gap: 1rem;
         grid-template-columns: repeat(3, 1fr);
         -ms-grid-columns: 1fr 1rem 1fr 1rem 1fr;
@@ -2642,24 +2643,24 @@ footer {
 }
 
 @media (max-width:630px) {
-    .item-card{
+    .item-card {
         padding: 1.5rem 1.5rem 5rem 1.5rem;
     }
 
-    .items-grid{
+    .items-grid {
         grid-template-columns: repeat(2, 1fr);
         -ms-grid-columns: 1fr 1rem 1fr;
     }
 }
 
 @media (max-width:500px) {
-    .item-card{
+    .item-card {
         padding: 1rem 1rem 3rem 1rem;
     }
 }
 
 @media (max-width:380px) {
-    .item-card{
+    .item-card {
         padding-bottom: 2rem;
     }
 }
@@ -2677,7 +2678,7 @@ footer {
 }
 
 @media (max-width:1024px) {
-    .item-card__content{
+    .item-card__content {
         gap: 1.5rem;
     }
 }
@@ -2693,82 +2694,524 @@ footer {
     color: var(--gray2);
     line-height: 135%;
     text-transform: none;
-    -webkit-box-flex: 1;  /* Для старых браузеров */
-    -ms-flex-positive: 1; /* IE10 */
-    flex-grow: 1;         /* Растягивается на всё доступное пространство */
-    min-width: 0;         /* Фикс для переполнения в Flexbox */
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    min-width: 0;
     word-wrap: break-word;
 }
 
 @media (max-width:900px) {
-    .item-card__content h3{
+    .item-card__content h3 {
         font-size: 1.8rem;
     }
 }
 
 @media (max-width:630px) {
-    .item-card__content h3{
+    .item-card__content h3 {
         font-size: 2rem;
     }
 }
 
 @media (max-width:500px) {
-    .item-card__content h3{
+    .item-card__content h3 {
         font-size: 1.8rem;
     }
 }
 
 @media (max-width:380px) {
-    .item-card__content h3{
+    .item-card__content h3 {
         font-size: 1.6rem;
     }
 }
 
-.item-card__content svg{
+.item-card__content svg {
     width: 4.8rem;
     height: 4.8rem;
-    -ms-flex-negative: 0; /* IE10 */
-    flex-shrink: 0;  
+    -ms-flex-negative: 0;
+    /* IE10 */
+    flex-shrink: 0;
 }
 
 @media (max-width:1024px) {
-    .item-card__content svg{
+    .item-card__content svg {
         width: 3.8rem;
         height: 3.8rem;
     }
 }
 
 @media (max-width:630px) {
-    .item-card__content svg{
+    .item-card__content svg {
         width: 4.5rem;
         height: 4.5rem;
     }
 }
 
 @media (max-width:500px) {
-    .item-card__content svg{
+    .item-card__content svg {
         width: 4rem;
         height: 4rem;
     }
 }
 
 @media (max-width:380px) {
-    .item-card__content svg{
+    .item-card__content svg {
         width: 3.8rem;
         height: 3.8rem;
     }
 }
 
 @media (hover: hover) {
-    .item-card:hover h3{
+    .item-card:hover h3 {
         color: var(--primary);
     }
 
-    .item-card:hover svg .fill-primary{
+    .item-card:hover svg .fill-primary {
         fill: var(--primary);
     }
 
-    .item-card:hover svg .stroke-white{
+    .item-card:hover svg .stroke-white {
         stroke: #fff;
     }
+}
+
+/* item page */
+.big-container.item-page-container {
+    background-color: #fff;
+    border-radius: 2rem;
+    padding: 3rem 0 6.6rem;
+}
+
+@media (max-width:450px) {
+    .big-container.item-page-container {
+        padding-top: 10px;
+    }
+}
+
+.item-page-container__inner-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    gap: 6.7rem;
+}
+
+.item-page-container__main-block {
+    width: 100%;
+
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    gap: 3rem;
+}
+
+@media (max-width:972px) {
+    .item-page-container__main-block {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: flex-start;
+        gap: 3rem;
+    }
+}
+
+.item-page-main__item-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    gap: 4rem;
+    max-width: 67.22%;
+}
+
+@media (max-width:972px) {
+    .item-page-main__item-container {
+        max-width: 100%;
+    }
+}
+
+.item-container__main-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 2rem;
+}
+
+@media (max-width:605px) {
+    .item-container__main-info {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+    }
+}
+
+.item-main-info__image-grid {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 10fr 1rem 43fr;
+    grid-template-columns: 10fr 43fr;
+    gap: 1rem;
+    max-width: 57.39%;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+}
+
+@media (max-width:972px) {
+    .item-main-info__image-grid {
+        max-width: 50%;
+    }
+}
+
+@media (max-width:605px) {
+    .item-main-info__image-grid {
+        max-width: none;
+        width: 100%;
+    }
+}
+
+.image-grid__thumbs {
+    height: 100%;
+    max-height: 100%;
+}
+
+.image-grid__thumbs .swiper-wrapper {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: 1fr 1rem 1fr 1rem 1fr 1rem 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    gap: 1rem;
+    height: 100%;
+}
+
+@media (max-width:1024px) {
+    .image-grid__thumbs .swiper-wrapper {
+        gap: 0.5rem;
+    }
+}
+
+@media (max-width:972px) {
+    .image-grid__thumbs .swiper-wrapper {
+        gap: 1rem;
+    }
+}
+
+@media (max-width:768px) {
+    .image-grid__thumbs .swiper-wrapper {
+        gap: 0.5rem;
+    }
+}
+
+@media (max-width:605px) {
+    .image-grid__thumbs .swiper-wrapper {
+        gap: 1rem;
+    }
+}
+
+@media (max-width:450px) {
+    .image-grid__thumbs .swiper-wrapper {
+        gap: 0.5rem;
+    }
+}
+
+.image-grid__thumbs .swiper-slide {
+    width: 100%;
+    aspect-ratio: 1/1;
+    height: auto !important;
+    cursor: pointer;
+    opacity: 0.6;
+    -webkit-transition: opacity 0.3s, border 0.3s;
+    -o-transition: opacity 0.3s, border 0.3s;
+    transition: opacity 0.3s, border 0.3s;
+    border-radius: 1rem;
+}
+
+.image-grid__thumbs .swiper-slide-thumb-active {
+    opacity: 1;
+}
+
+.image-grid__main {
+    width: 100%;
+    overflow: hidden;
+}
+
+.image-grid__main img,
+.image-grid__thumbs img {
+    width: 100%;
+    aspect-ratio: 1/1;
+    border-radius: 1rem;
+}
+
+.item-main-info__text-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 1.5rem;
+    max-width: 38.1rem;
+}
+
+.item-main-info__text-block h2 {
+    font-weight: 400;
+    font-size: 3.6rem;
+    line-height: 136%;
+    color: var(--gray1);
+    text-transform: none;
+}
+
+@media (max-width: 1070px) {
+    .item-main-info__text-block h2 {
+        font-size: 3.2rem;
+    }
+}
+
+@media (max-width:972px) {
+    .item-main-info__text-block h2 {
+        font-size: 3.6rem;
+    }
+
+    .item-main-info__text-block {
+        max-width: 40rem;
+    }
+}
+
+@media (max-width:768px) {
+    .item-main-info__text-block h2 {
+        font-size: 3.2rem;
+    }
+}
+
+@media (max-width:605px) {
+    .item-main-info__text-block {
+        max-width: 90%;
+    }
+}
+
+@media (max-width:450px) {
+    .item-main-info__text-block {
+        max-width: 100%;
+        gap: 1rem;
+    }
+
+    .item-main-info__text-block h2 {
+        font-size: 2.4rem;
+    }
+}
+
+.item-main-info__text-block p {
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 135%;
+    color: var(--gray2);
+    width: 100%;
+}
+
+.item-container__characteristics {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 2rem;
+}
+
+.characteristics-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 1rem;
+}
+
+.btn.characteristic-tab {
+    border: 1px solid rgba(114, 114, 114, 0.2);
+    border-radius: 1rem;
+    padding: 1.4rem 1.3rem;
+}
+
+.btn.characteristic-tab.active {
+    border-color: var(--primary);
+}
+
+@media (hover: hover) {
+    .btn.characteristic-tab:hover {
+        border-color: var(--primary);
+    }
+}
+
+.characteristics-table {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 1rem;
+
+    max-width: 73rem;
+    width: 100%;
+}
+
+.characteristics__table-item {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    gap: 2rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid rgba(27, 115, 187, 0.2);
+}
+
+.characteristics__table-item p {
+    font-size: 1.6rem;
+    line-height: 135%;
+}
+
+.sizes-block {
+    display: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+}
+
+.item-page-main__offer-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 1rem;
+    max-width: 341px;
+    width: 100%;
+}
+
+@media (max-width:605px) {
+    .item-page-main__offer-container {
+        max-width: none;
+    }
+}
+
+.item-offer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 2.3rem;
+    padding: 5rem 2.8rem 2.3rem;
+    border-radius: 2rem;
+    background: #008CFF;
+    position: relative;
+    overflow: hidden;
+}
+
+.item-offer img {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    max-height: 85%;
+}
+
+.item-offer h4 {
+    font-weight: 500;
+    font-size: 2rem;
+    line-height: 135%;
+    text-align: center;
+    color: #fff;
+    max-width: 28.3rem;
+}
+
+.item-offer .btn {
+    background: #fff;
+    color: var(--primary);
+    font-weight: 400;
+}
+
+.item-offer .btn:hover {
+    background: #f0f8ff;
+}
+
+.item-offer__badge {
+    width: 100%;
+    background: #fff;
+    border: 1px solid rgba(27, 115, 187, 0.31);
+    border-radius: 1rem;
+    padding: 1.1rem 2rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 1.1rem;
+
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 135%;
+    color: var(--primary);
+}
+
+.item-page-container__alike-items-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 2rem;
+}
+
+.item-page-container__alike-items-block .alike-title {
+    font-weight: 400;
+    font-size: 3.6rem;
+    line-height: 136%;
+    color: var(--gray1);
+    text-transform: none;
+}
+
+@media (max-width:450px) {
+    .item-page-container__alike-items-block .alike-title {
+        font-size: 2.4rem;
+    }
+
+    .item-page-container__alike-items-block {
+        gap: 1rem;
+    }
+}
+
+.item-page-container__alike-items-block .item-card{
+    border: 1px solid var(--primary);
 }
