--- a/css/style.css
+++ b/css/style.css
@@ -2889,10 +2889,13 @@ footer {
 }
 
 .image-grid__thumbs .swiper-wrapper {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-rows: 1fr 1rem 1fr 1rem 1fr 1rem 1fr;
-    grid-template-rows: repeat(4, 1fr);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     gap: 1rem;
     height: 100%;
 }
